--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     -->
     <title>Admin Panel</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/10307/10307911.png">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4026540130691163"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
